[gd_scene load_steps=17 format=3 uid="uid://cdeldvbrf2yor"]

[ext_resource type="Script" path="res://game_over.gd" id="1_xefua"]
[ext_resource type="Texture2D" uid="uid://khoaq7txuhva" path="res://assets/gameoverui/gameover2.png" id="2_4pvj5"]
[ext_resource type="Texture2D" uid="uid://chwsmcaiaaiy" path="res://assets/gameoverui/restartbutton.png" id="3_f4vqa"]
[ext_resource type="Texture2D" uid="uid://cn4rj1on17kq0" path="res://assets/gameoverui/menuimgbg.png" id="3_l6jlj"]
[ext_resource type="Texture2D" uid="uid://064dsupd3y47" path="res://assets/gameoverui/levelcomplete.png" id="4_aqbn5"]
[ext_resource type="Texture2D" uid="uid://qj0nqwi5bo3u" path="res://assets/gameoverui/restartbuttonpush.png" id="4_c5hec"]
[ext_resource type="Texture2D" uid="uid://buunyikfilecr" path="res://assets/gameoverui/returnbutton.png" id="5_wahwc"]
[ext_resource type="Texture2D" uid="uid://bxs1w2vj6a5pg" path="res://assets/gameoverui/returnbuttonpush.png" id="6_spv53"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tfgjf"]
texture = ExtResource("3_f4vqa")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_duob8"]
texture = ExtResource("4_c5hec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_75flv"]
texture = ExtResource("4_c5hec")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ahxf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_snlln"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cipjv"]
texture = ExtResource("5_wahwc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y1wis"]
texture = ExtResource("6_spv53")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2tg70"]
texture = ExtResource("6_spv53")

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xefua")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_4pvj5")

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_l6jlj")

[node name="TextureRect2" type="TextureRect" parent="TextureRect3"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_aqbn5")

[node name="Label" type="Label" parent="TextureRect3"]
process_mode = 3
layout_mode = 0
offset_left = 946.667
offset_top = 800.0
offset_right = 986.667
offset_bottom = 826.0
scale = Vector2(4, 4)
theme_override_colors/font_color = Color(0.703125, 0, 0.648438, 1)
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(140, 0)
offset_left = 888.0
offset_top = 320.0
offset_right = 1028.0
offset_bottom = 508.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Game Over"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_tfgjf")
theme_override_styles/hover = SubResource("StyleBoxTexture_duob8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_75flv")
text = " "

[node name="Play2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxTexture_1ahxf")
theme_override_styles/focus = SubResource("StyleBoxTexture_snlln")
disabled = true
text = " "

[node name="Return" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_cipjv")
theme_override_styles/hover = SubResource("StyleBoxTexture_y1wis")
theme_override_styles/pressed = SubResource("StyleBoxTexture_2tg70")
text = " 
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
